--- a/portal.html
+++ b/portal.html
@@ -1,3 +1,4 @@
+<!-- Nifty - Responsive Admin Template -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,6 +25,8 @@
 	<!--Switchery [ OPTIONAL ]-->
 	<link href="plugins/switchery/switchery.min.css" rel="stylesheet">
 
+	<!--Morris.js [ OPTIONAL ]-->
+	<link href="plugins/morris-js/morris.min.css" rel="stylesheet">
 
 	<!--Bootstrap Select [ OPTIONAL ]-->
 	<link href="plugins/bootstrap-select/bootstrap-select.min.css" rel="stylesheet">
@@ -645,6 +648,10 @@
 
 
 	<script src="plugins/skycons/skycons.min.js"></script>
+
+	<!--Morris.js [ OPTIONAL ]-->
+	<script src="plugins/morris-js/morris.min.js"></script>
+	<script src="plugins/morris-js/raphael-js/raphael.min.js"></script>
 	
 	<!--Switchery [ OPTIONAL ]-->
 	<script src="plugins/switchery/switchery.min.js"></script>
