--- a/pages/addHTMLBanner.html
+++ b/pages/addHTMLBanner.html
@@ -56,25 +56,52 @@
 								<p ng-show="form.description.$invalid && submitted" class="help-block">Description is required.</p>
 							</div>
 						</div>
-						<div class="form-group" ng-class="{ 'has-error' : form.html.$invalid && submitted }">
-							<label for="html" class="col-sm-2 control-label">HTML</label>
-							<div class="col-sm-10">
-								<textarea ng-model="formData.item.html" required name="html" placeholder="<div style=''><span></span></div>" class="form-control" rows="8"></textarea>
-								<p ng-show="form.html.$invalid && submitted" class="help-block">HTML is required.</p>
-							</div>
+						<div class="form-group" ng-repeat="variant in formData.item.variants">
+							<hr ng-show="variant != formData.item.variants[0]">
+							<ng-form name="innerForm"><!-- inner form so validation work for dynamic names -->
+								<label class="col-sm-2 control-label">Html Banner Variant</label>
+								<div class="col-xs-10">
+									<div class="form-horizontal">	
+										<div class="form-group" ng-class="{ 'has-error' : innerForm.site.$invalid && submitted }">
+											<label for="Platform" class="col-sm-3 control-label">Sites</label>
+											<div class="col-sm-9">
+												<select required name="site" ng-model="variant.sites" multiple class="form-control">
+													<option>Regular</option>
+													<option>EDU</option>
+													<option>GSA</option>
+													<option>B2B</option>
+												</select>
+												<p ng-show="innerForm.site.$invalid && submitted" class="help-block">Please select a site.</p>
+											</div>
+										</div>				
+										<div class="form-group" ng-class="{ 'has-error' : form.html.$invalid && submitted }">
+											<label for="html" class="col-sm-2 control-label">HTML</label>
+											<div class="col-sm-10">
+												<textarea ng-model="variant.html" required name="html" placeholder="<div style=''><span></span></div>" class="form-control" rows="8"></textarea>
+												<p ng-show="form.html.$invalid && submitted" class="help-block">HTML is required.</p>
+											</div>
+										</div>
+										<div class="form-group">
+											<label for="html" class="col-sm-2 control-label">styles</label>
+											<div class="col-sm-10">
+												<textarea ng-model="variant.styles" name="styles" placeholder="#container {background-color:red}" class="form-control" rows="8"></textarea>
+											</div>
+										</div>
+										<div class="form-group">
+											<label for="scripts" class="col-sm-2 control-label">scripts</label>
+											<div class="col-sm-10">
+												<textarea ng-model="variant.scripts" name="scripts" placeholder="var alert = function() {}" class="form-control" rows="8"></textarea>
+											</div>
+										</div>
+									</div>
+								</div>							
+							</ng-form>	
 						</div>
 						<div class="form-group">
-							<label for="html" class="col-sm-2 control-label">styles</label>
-							<div class="col-sm-10">
-								<textarea ng-model="formData.item.styles" name="styles" placeholder="#container {background-color:red}" class="form-control" rows="8"></textarea>
-							</div>
-						</div>
-						<div class="form-group">
-							<label for="scripts" class="col-sm-2 control-label">scripts</label>
-							<div class="col-sm-10">
-								<textarea ng-model="formData.item.scripts" name="scripts" placeholder="var alert = function() {}" class="form-control" rows="8"></textarea>
-							</div>
-						</div>	
+					    	<div class="col-sm-offset-2 col-sm-10">
+					        	<div class="btn btn-default pull-right" ng-click="addVariant()">Add Variant</div>
+					    	</div>
+					    </div>
 					</div>
 					<div id="tab-where" class="tab-pane fade">
 						<div class="form-group" ng-class="{ 'has-error' : form.platform.$invalid && submitted }">
