--- a/pages/addHomePageBanner.html
+++ b/pages/addHomePageBanner.html
@@ -159,6 +159,16 @@
 								<input type="text" ng-model="formData.item.index" name="index" placeholder="1" class="form-control">
 							</div>
 						</div>
+						<div class="form-group" ng-class="{ 'has-error' : form.displayStyle.$invalid && submitted }">
+							<label for="displayStyle" class="col-sm-2 control-label">Display Style</label>
+							<div class="col-sm-10">
+								<select ng-model="formData.item.displayStyle" required name="displayStyle" class="form-control">
+									<option>Carousel</option>
+									<option>List</option>
+								</select>
+								<p ng-show="form.displayStyle.$invalid && submitted" class="help-block">Display Style is required.</p>
+							</div>
+						</div>	
 						<div class="form-group" ng-class="{ 'has-error' : form.imageSizes.$invalid && submitted }">
 							<label for="firstname" class="col-sm-2 control-label">Image Sizes</label>
 							<div class="col-sm-10">
